--- a/index.html
+++ b/index.html
@@ -16,10 +16,15 @@
 <button class="sign">Sign In</button>
     </div>
 </div>
-<div class="banner-container">
+<section>
     <div>
-        <img src="./assets/hero.png" alt="Bangladesh 2.0">
-    </div>
+        <p>Bangladesh 2.0</p>
+        <h2>Idea , innovation ,
+            vision and challenges in New Bangladesh.</h2>
+            <img src="./assets/hero.png" alt="Bangladesh 2.0">
+            <button>Explore New Bangladesh</button>
+        </div>
+</section>
 
 </div>
     </header>
