--- a/index.html
+++ b/index.html
@@ -1,39 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bangladesh 2.0</title>
-    <link rel="icon" type="" href="./assets/favicon.png">
-    <!-- Favicon added -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-    <!-- Fira Sans font added -->
     <link rel="stylesheet" href="style.css">
     <!-- style sheet added -->
 </head>
-<body class="open-sans-normal">
-    <header>
-<nav>
-    <div>
-<h1>Bangladesh 2.0</h1>
-</div>
-    <div class="btn">
-<button class="sign-btn">Sign In</button>
-    </div>
-</nav>
-    <div class="banner">
-        <div class="banner-content">
-            <p>Bangladesh 2.0</p>
-            <h2>Idea , innovation ,<br>
-                vision and challenges in <br> New Bangladesh.</h2>
-        </div>
-            <img src="./assets/hero.png" alt="Bangladesh 2.0">
-            <button>Explore New Bangladesh</button>
-        </div>
-</section>
 
+<body>
+    <header>
+        <div class="navbar">
+            <div>
+            <h1>Bangladesh 2.0</h1>
+        </div>
+        <div class="sign-btn">
+            <button class="sign">Sign In</button>
+        </div>
+    </div>
+    <div class="banner-container">
+        <div class="banner-content">           
+            <p class="banner-title">Bangladesh 2.0</p>
+            <h1 class="banner-header">Idea , innovation ,<br>
+                vision and challenges in <br>New Bangladesh.</h1>
+                <button class="explore">Explore New Bangladesh</button>
+        </div>
+        <div>
+            <img class="banner-img" src="./assets/hero.png" alt="">
+        </div>
+    </div>
     </header>
     <main>
 
@@ -42,4 +38,5 @@
 
     </footer>
 </body>
+
 </html>
