added first box section

--- a/index.html
+++ b/index.html
@@ -13,26 +13,50 @@
     <header>
         <div class="navbar">
             <div>
-            <h1>Bangladesh 2.0</h1>
+                <h1>Bangladesh 2.0</h1>
+            </div>
+            <div class="sign-btn">
+                <button class="sign">Sign In</button>
+            </div>
         </div>
-        <div class="sign-btn">
-            <button class="sign">Sign In</button>
-        </div>
-    </div>
-    <div class="banner-container">
-        <div class="banner-content">           
-            <p class="banner-title">Bangladesh 2.0</p>
-            <h1 class="banner-header">Idea , innovation ,<br>
-                vision and challenges in <br>New Bangladesh.</h1>
+        <div class="banner-container">
+            <div class="banner-content">
+                <p class="banner-title">Bangladesh 2.0</p>
+                <h1 class="banner-header">Idea , innovation ,<br>
+                    vision and challenges in <br>New Bangladesh.</h1>
                 <button class="explore">Explore New Bangladesh</button>
+            </div>
+            <div>
+                <img class="banner-img" src="./assets/hero.png" alt="">
+            </div>
         </div>
-        <div>
-            <img class="banner-img" src="./assets/hero.png" alt="">
-        </div>
-    </div>
     </header>
     <main>
-
+        <div class="pillars">
+            <h2 class="piller-head">Pillars of "Bangladesh 2.0"</h2>
+            <div class="pillar-box">
+                <div class="box-item">
+                    <img class="box-image" src="./assets/card-icon.png" alt="">
+                    <h3 class="box-title">Innovation</h3>
+                    <p class="box-description">Innovation in Bangladesh is driving <br> progress in tech, education, and industries.</p>
+                </div>
+                <div class="box-item">
+                    <img src="./assets/card-icon.png" alt="">
+                    <h3 class="box-title">Sustainability</h3>
+                    <p class="box-description">Sustainability in Bangladesh focuses on <br> balancing development with environmental protection.</p>
+                </div>
+                <div class="box-item">
+                    <img src="./assets/card-icon.png" alt="">
+                    <h3 class="box-title">Infrastructure</h3>
+                    <p class="box-description">Bangladesh's infrastructure is evolving, <br> focusing on roads, bridges, and energy.</p>
+                </div>
+                <div class="box-item">
+                    <img src="./assets/card-icon.png" alt="">
+                    <h3 class="box-title">Empowerment</h3>
+                    <p class="box-description">Empowerment in Bangladesh drives change, <br> fostering equality and opportunity.</p>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
 
