added vision section

--- a/index.html
+++ b/index.html
@@ -34,27 +34,68 @@
     <main>
         <div class="pillars">
             <h2 class="piller-head">Pillars of "Bangladesh 2.0"</h2>
-            <div class="pillar-box">
+            <div class="box">
                 <div class="box-item">
-                    <img class="box-image" src="./assets/card-icon.png" alt="">
+                    <img src="./assets/card-icon.png" alt="card icon">
                     <h3 class="box-title">Innovation</h3>
-                    <p class="box-description">Innovation in Bangladesh is driving <br> progress in tech, education, and industries.</p>
+                    <p class="box-description">Innovation in Bangladesh is driving <br> progress in tech, education,
+                        <br> and industries.
+                    </p>
                 </div>
                 <div class="box-item">
-                    <img src="./assets/card-icon.png" alt="">
+                    <img src="./assets/card-icon.png" alt="card icon">
                     <h3 class="box-title">Sustainability</h3>
-                    <p class="box-description">Sustainability in Bangladesh focuses on <br> balancing development with environmental protection.</p>
+                    <p class="box-description">Sustainability in Bangladesh focuses on <br> balancing development with
+                        environmental <br> protection.</p>
                 </div>
                 <div class="box-item">
-                    <img src="./assets/card-icon.png" alt="">
+                    <img src="./assets/card-icon.png" alt="card icon">
                     <h3 class="box-title">Infrastructure</h3>
-                    <p class="box-description">Bangladesh's infrastructure is evolving, <br> focusing on roads, bridges, and energy.</p>
+                    <p class="box-description">Bangladesh's infrastructure is evolving, <br> focusing on roads, bridges,
+                        and energy.</p>
                 </div>
                 <div class="box-item">
-                    <img src="./assets/card-icon.png" alt="">
+                    <img src="./assets/card-icon.png" alt="card icon">
                     <h3 class="box-title">Empowerment</h3>
-                    <p class="box-description">Empowerment in Bangladesh drives change, <br> fostering equality and opportunity.</p>
+                    <p class="box-description">Empowerment in Bangladesh drives change, <br> fostering equality and
+                        opportunity.</p>
                 </div>
+            </div>
+        </div>
+        <div class="vision">
+            <h3 class="vision-header">The Vision of Future</h3>
+            <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting
+                inclusive growth, and ensuring sustainability. With initiatives in <br> renewable energy, digital
+                transformation, and robust infrastructure, the country is set to become a global model of development.
+            </p>
+            <div class="box">
+                <!-- .vision-item*3>img+h3.vision-title+p.vision-description+button -->
+                <div class="box-item blue">
+                    <img src="./assets/card-icon.png" alt="card icon">
+                    <h3 class="box-title">Digital Transformation</h3>
+                    <p class="box-description">Creating a nationwide digital ecosystem to <br> enhance connectivity
+                        and access to services for <br> all citizens.</p>
+                    <button class="blue-button">Learn More</button>
+                </div>
+                <div class="box-item green">
+                    <img src="./assets/card-icon.png" alt="card icon">
+                    <h3 class="box-title">Green Energy</h3>
+                    <p class="box-description">Investments in solar and wind energy to ensure <br> a sustainable and
+                        eco-friendly future.</p>
+                    <button class="green-button">Learn More</button>
+                </div>
+                <div class="box-item yellow">
+                    <img src="./assets/card-icon.png" alt="card icon">
+                    <h3 class="box-title">Modern Infrastructure</h3>
+                    <p class="box-description">Building state-of-the-art infrastructure to support <br> economic
+                        growth and global competitiveness.</p>
+                    <button class="yellow-button">Learn More</button>
+                </div>
+            </div>
+            <div class="box-item quotes">
+                <p class="box-description">"The future of Bangladesh lies in empowering its people through education, innovation, and sustainable development. By nurturing <br> entrepreneurship and fostering a spirit of social responsibility, we can build a nation where economic progress is not just for the few, <br> but for everyone. Together, we can transform challenges into opportunities, ensuring that every citizen contributes to and benefits <br> from a brighter, more prosperous future."</p>
+                <h4 class="box-title">Dr. Muhammad Yunus</h4>
+                <p class="box-description">Chief Adviser of the People's Republic of Bangladesh</p>
             </div>
         </div>
     </main>
